cabal-version:      >=1.10
name:               jsdom-extras
version:            0.1.0.0
synopsis:           Convenience utilities for JSDOM
description:        Commonly used javascript functions
license:            BSD3
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2024 Obsidian Systems LLC
category:           Web
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

library
  exposed-modules:
    JSDOM.Extras.ConsoleLog
    JSDOM.Extras.JSON
    JSDOM.Extras.Object

  build-depends:
      aeson        >=2.0   && <2.3
    , base         >=4.14  && <4.19
    , jsaddle      >=0.9.4 && <0.10
    , jsaddle-dom  >=0.9.4 && <0.10
    , lens         >=5.0.0 && <5.4
    , text         >=1.2.4 && <2.1

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/obsidiansystems/jsdom-extras
