cabal-version:      3.0
name:               jsdom-extras
version:            0.1.0.0
synopsis:           Convenience utilities for JSDOM
description:        Handy javascript functions and bindings for web development
license:            BSD-3-Clause
license-file:       LICENSE
author:             Obsidian Systems LLC
maintainer:         maintainer@obsidian.systems
copyright:          2024 Obsidian Systems LLC
category:           Web
build-type:         Simple
extra-source-files: README.md

library
  exposed-modules:
    JSDOM.Extras.ConsoleLog
    JSDOM.Extras.JSON
    JSDOM.Extras.Object
    JSDOM.Extras.WaitForJS

  build-depends:
    , aeson    >=2.0   && <2.2
    , base     >=4.11  && <4.22
    , jsaddle  >=0.9.8 && <0.10
    , lens     >=5.0.1 && <5.4
    , text     >=1.2.4 && <2.2

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

source-repository head
  type:     git
  location: https://github.com/obsidiansystems/jsdom-extras
